<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0384F4"
    tools:context=".ventana2_resq2ABC">

    <TextView
        android:id="@+id/TVent2.2"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/tvQ2"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="237dp"
        android:layout_height="141dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVent2.2">

        <RadioButton
            android:id="@+id/RBVent2.1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Q2RB1"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/RBVent2.2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Q2RB2"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/RBVent2.3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Q2RB3"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/RBVent2.4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Q2RB4"
            android:textColor="#FFFFFF" />
    </RadioGroup>

    <TableLayout
        android:layout_width="372dp"
        android:layout_height="74dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/homeV2"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:onClick="moviV2"
                app:srcCompat="@drawable/home" />

            <Button
                android:id="@+id/button2"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:text="Button"
                android:visibility="invisible" />

            <ImageButton
                android:id="@+id/avanV2"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:onClick="moviV2"
                app:srcCompat="@drawable/derecha" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="265dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="SEGUNDA PREGUNTA"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>