<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0384F4"
    tools:context=".ventana4_resq4A">

    <TextView
        android:id="@+id/TVent4.1A"
        android:layout_width="332dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/tvQ4A"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <RadioGroup
        android:id="@+id/radioGroup4"
        android:layout_width="239dp"
        android:layout_height="136dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVent4.1A">

        <RadioButton
            android:id="@+id/RBVent4.1A"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Q4RB1A"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/RBVent4.2A"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Q4RB2A"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/RBVent4.3A"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Q4RB3A"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/RBVent4.4A"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Q4RB4A"
            android:textColor="#FFFFFF" />
    </RadioGroup>

    <TableLayout
        android:layout_width="373dp"
        android:layout_height="73dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup4">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/homeV4A"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:onClick="moviV4A"
                app:srcCompat="@drawable/home" />

            <Button
                android:id="@+id/button6"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:text="Button"
                android:visibility="invisible" />

            <ImageButton
                android:id="@+id/avanV4A"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:onClick="moviV4A"
                app:srcCompat="@drawable/derecha" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="264dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="CUARTA PREGUNTA"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>