<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0384F4"
    tools:context=".ventana4_resq4D">

    <TextView
        android:id="@+id/TVent4D"
        android:layout_width="318dp"
        android:layout_height="42dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/tvQ4D"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <RadioGroup
        android:id="@+id/radioGroup7"
        android:layout_width="248dp"
        android:layout_height="132dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVent4D">

        <RadioButton
            android:id="@+id/RBVent4.1D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Q4RB1D"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/RBVent4.2D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Q4RB2D"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/RBVent4.3D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Q4RB3D"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/RBVent4.4D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Q4RB4D"
            android:textColor="#FFFFFF" />
    </RadioGroup>

    <TableLayout
        android:layout_width="369dp"
        android:layout_height="77dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup7">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/homeV4D"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:onClick="moviV4D"
                app:srcCompat="@drawable/home" />

            <Button
                android:id="@+id/button9"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:text="Button"
                android:visibility="invisible" />

            <ImageButton
                android:id="@+id/avanV4D"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:onClick="moviV4D"
                app:srcCompat="@drawable/derecha" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textView16"
        android:layout_width="238dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="CUARTA PREGUNTA"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>