<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0384F4"
    tools:context=".Ventana1Resq">

    <RadioGroup
        android:id="@+id/RGVent1"
        android:layout_width="273dp"
        android:layout_height="151dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVent1.2">

        <RadioButton
            android:id="@+id/RBVent1.1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Q1RB1"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/RBVent1.2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Q1RB2"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/RBVent1.3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Q1RB3"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/RBVent1.4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Q1RB4"
            android:textColor="#FFFFFF" />
    </RadioGroup>

    <TextView
        android:id="@+id/TVent1.2"
        android:layout_width="230dp"
        android:layout_height="36dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/tvQ1"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="364dp"
        android:layout_height="67dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RGVent1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/houseV1"
                android:layout_width="90dp"
                android:layout_height="60dp"
                android:onClick="moviV1"
                android:tint="#00FFFFFF"
                app:srcCompat="@drawable/home" />

            <Button
                android:id="@+id/button"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="Button"
                android:visibility="invisible" />

            <ImageButton
                android:id="@+id/avanV1"
                android:layout_width="90dp"
                android:layout_height="60dp"
                android:onClick="moviV1"
                android:tint="#00FFFFFF"
                app:srcCompat="@drawable/derecha" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="279dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="PRIMERA PREGUNTA"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>